Added dropdown to choose player and subscribe to the correct topic

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1 {
 
 .kopfzeile {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     height: 70px;
     background-color: var(--blue);
@@ -32,6 +33,10 @@ h1 {
     margin: 0 70px;
     color: var(--white);
     font-size: 24px;
+}
+
+#spieler {
+    margin-right: 70px;
 }
 
 .spielbereich {
