--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ button {
     color: var(--white);
 }
 
-#zuruecksetzen {
+#alle-aktionen-zuruecksetzen {
     background-color: var(--white);
     color: var(--dark);
 }
