--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,20 @@ h1 {
     background-color: var(--blue);
 }
 
+#logo {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin: 0 70px;
+}
+
+#robo-icon {
+    height: 40px;
+}
+
 .kopfzeile p {
     display: inline-block;
-    margin: 0 70px;
+    margin: 0 20px;
     color: var(--white);
     font-size: 24px;
 }
