--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,6 @@ ul.verfuegbare-aktionen {
     flex: 1 1 auto;
     display: flex;
     align-items: center;
-    height: 50px;
     border: 1px var(--dark) solid;
     border-radius: 10px 50px 50px 10px;
 }
@@ -166,6 +165,8 @@ ul.verfuegbare-aktionen {
    - https://codepen.io/gnclmorais/pen/cHkqt/
 */
 .aktions-auswahl {
+    align-self: stretch;
+    flex: 1 1 auto;
     padding: 0;
     margin: 0;
     font-size: 18px;
@@ -173,6 +174,7 @@ ul.verfuegbare-aktionen {
     background: transparent none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    cursor: pointer;
 }
 
 .aktions-auswahl:focus {
