--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,21 @@ ul.verfuegbare-aktionen {
     color: var(--dark);
 }
 
+.verfuegbare-aktion.ROLL {
+    border: none;
+    background-color: var(--roll-color);
+}
+
+.verfuegbare-aktion.ROTATE {
+    border: none;
+    background-color: var(--rotate-color);
+}
+
+.verfuegbare-aktion.SET_RGB {
+    border: none;
+    background-color: var(--set-rgb-color);
+}
+
 .verfuegbare-aktion i {
     flex: 1 1 auto;
     font-size: 48px;
